feat(ui): Implement card assignment toggle for the current user
- Add `assignedToMe` property to `PreviewCard` domain model
- Android: Add a context menu to cards in `BoardScreen` to toggle assignment
- Android: Implement `toggleAssignment` in `BoardViewModel` using `AssignCardUseCase` and `UnassignCardUseCase`
- JavaFX: Replace the assignee icon counter with an `AvatarView` in `CardPreviewView`
- JavaFX: Update `CardPreviewCellFactory` to inject account use cases and bind the current user's account to the card view
- Data: Update `CardRepositoryImpl` and `MockData` to support the new `assignedToMe` state

Co-authored-by: Gemini 3 Flash Preview
Signed-off-by: Stefan Niedermann <info@niedermann.it>